--- a/src/sass/components/header.scss
+++ b/src/sass/components/header.scss
@@ -46,6 +46,7 @@
       padding: 0.8em 0;
       background: #fff;
       width: inherit;
+      text-transform: capitalize;
       // display: none;
     }
     &:hover div span i {
