--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -12,7 +12,9 @@
   './components/modal.scss', './atoms/linkcategory.scss',
   './atoms/btnchild.scss', './components/quotesdes.scss', './atoms/table.scss',
   './atoms/priced.scss', './atoms/listoption.scss', './atoms/envios.scss',
-  './atoms/count.scss';
+  './atoms/count.scss', './components/options.scss',
+  './components/optionslist.scss', './atoms/inputsquare.scss',
+  './components/cartslide.scss', './components/viewcart.scss';
 .main {
   // background: $background;
   // height: 200vh;
