--- a/src/sass/atoms/count.scss
+++ b/src/sass/atoms/count.scss
@@ -38,6 +38,9 @@
     height: 3em;
     background: #000;
     color: #fff;
+    &:hover {
+      background: $color-dark;
+    }
     // font-size: 0.8em;
     // padding: 1em 3em;
   }
