--- a/src/sass/components/header.scss
+++ b/src/sass/components/header.scss
@@ -111,5 +111,5 @@
   overflow-y: scroll;
   overflow-x: hidden;
   width: 17em;
-  box-shadow: -1px 4px 10px 2px $color-drop-gray;
+  box-shadow: 0 1px 4px 1px rgba(0, 0, 0, 0.09);
 }
